Add endpoint to create record using chat-gpt (wip)
